[package]
name = "fast-ruby-lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
tower-lsp = { version = "0.20.0", features = ["proposed"] }
ruby-prism = { version = "0.24.0" }
walkdir = "2.5.0"
dashmap = "5.5.3"
ropey = "1.6.1"
pest = "*"


[profile.release]
opt-level = 3
lto = true
debug = false
debug-assertions = false
